--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,9 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  memo: MyText
-
-two:
-  title: MyString
-  memo: MyText
+  title: Ruby超入門
+  author: 五十嵐 邦明
+  memo: 名著です。
